# Sarah

./: CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md
core/: Cargo.toml  build.rs  uniffi.toml
core/src/: counter.rs  errors.rs  lib.rs
docs/: 00_ONBOARDING_THE_CAUSE.md  ASYNC-STRATEGY-EVALUATION.md
docs/adrs/: ADR-005-tiered-lowering-vs-strict-subset.md  ADR-006-three-zone-async-boundary-model.md  ADR-006b-async-strategy-evaluation.md
docs/rfcs/: RFC-001-progressive-migration-engine.md
docs/specs/: SPEC-001-core-shell-classification.md  SPEC-002-tiered-lowering.md  SPEC-003-class-compatibility.md  SPEC-004-uniffi-boundary-generation.md  SPEC-005-diagnostic-system.md  SPEC-006-async-bridging-strategy.md  SPEC-006-async-strategy-evaluation.md  SPEC-007-streaming-async-sequence.md  SPEC-008-treesitter-swift-integration.md  SPEC-009-swiftfile-ir.md
shell/: Package.swift
shell/Sources/CounterApp/: ContentView.swift  CounterApp.swift  CounterViewModel.swift
transpiler/: Cargo.toml
transpiler/src/: classify.rs  codegen.rs  diagnostics.rs  drop_gen.rs  lib.rs  main.rs  parser.rs  shell_gen.rs  types.rs
transpiler/tests/: round_trip.rs
