[package]
name        = "sarah-cli"
version     = "0.1.0"
edition     = "2021"
description = "Sarah — Swift-to-Rust transpiler CLI (Phase 2)"
license     = "MIT"

[[bin]]
name = "sarah"
path = "src/main.rs"

[dependencies]
# Argument parsing
clap = { version = "4", features = ["derive"] }
# Serialisation for diagnostic JSON / AST JSON output
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
# Error handling
thiserror = "1"
anyhow    = "1"
# Colourised terminal output
colored = "2"
