[package]
name        = "sarah-cli"
version     = "0.2.0"
edition     = "2021"
description = "Sarah — Swift-to-Rust transpiler CLI (Phase 2)"
license     = "MIT"

[[bin]]
name = "sarah"
path = "src/main.rs"

[lib]
name = "sarah_cli_lib"
path = "src/lib.rs"

[dependencies]
clap        = { version = "4", features = ["derive"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
anyhow      = "1"
colored     = "2"
tree-sitter       = "0.23.0"
tree-sitter-swift = "=0.7.1"
